# scope-mms-tts

./: .gitignore  README.md  pyproject.toml
scope_mms_tts/: __init__.py  plugin.py
scope_mms_tts/pipelines/: __init__.py
scope_mms_tts/pipelines/mms_tts/: __init__.py  pipeline.py  schema.py
scope_mms_tts/pipelines/text_to_speech/: __init__.py  pipeline.py  schema.py
tests/: test_mms_tts.py  test_text_to_speech.py
